<resources>
    <string name="app_name">Help4Hire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_active_services">ActiveServices</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="app_logo">app logo</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="user">User</string>
    <string name="sign_up_as_a_user_or_provider">Sign up as a User or Provider</string>
    <string name="provider">Provider</string>
    <string name="profile_picture">profile picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="reset_password">reset password</string>
    <string name="save">Save</string>
    <string name="title_activity_provider_sign_up">ProviderSignUp</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="email_id">Email Id</string>
    <string name="back">Back</string>
    <string name="enter_you_email_id_to_receive_instructions_to_reset_password">Enter you Email ID to receive instructions to reset password</string>

    <!--This Array Below is for the Spinner in the Provider Sign Up-->
    <string-array name="provider_choices">
        <item>dog walker</item>
        <item>maid</item>
        <item>baby sitter</item>
        <item>car washer</item>
        <item>plumber</item>
        <item>mechanic</item>
        <item>dog sitter</item>
        <item>computer repair</item>

    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="hire_me">Hire Me!</string>
</resources>
