<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="181dp"
        android:layout_height="163dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/app_logo_trans"
        android:onClick="hideKeyboard"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:background="@drawable/search_bar"
        android:elevation="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/search_bar"
        android:elevation="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_light"
        android:elevation="10dp"
        android:onClick="hideKeyboard"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/forgotButton"
        app:layout_constraintEnd_toStartOf="@+id/signupButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:accessibilityHeading="true"
        android:background="@android:color/holo_green_light"
        android:elevation="10dp"
        android:onClick="hideKeyboard"
        android:text="@string/signup"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/forgotButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/forgotButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="237dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="hideKeyboard"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
